eclipseWorkspace/AK SFDC/src/objects/ISO_alpha3_Country_Code__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Akascia_Territory__c</fullName>
        <label>Akascia Territory</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_alpha2_Country_Code__c</fullName>
        <label>ISO alpha2 Country Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>ISO alpha3 Country Code</label>
</CustomObject>